--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.security.user.name=admin
+spring.security.user.password=admin
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-server.port=8090
+server.port=8091
 
 # redirect to swagger-ui
 spring.web.resources.add-mappings=true
